--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'SH'
 - !lcsh 'Fly fishing'
+- GITenberg
 title: 'Red Palmer: A Practical Treatise on Fly Fishing'
 url: http://www.gutenberg.org/ebooks/40446
